--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <groupId>com.bezkoder</groupId>
     <artifactId>spring-boot-login-example</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>spring-boot-login-example</name>
-    <description>Spring Boot Login example with Spring Security, JWT and MySQL - Rest API</description>
+    <name>edushare-backend</name>
+    <description>Spring Boot backend with Spring Security, JWT and MySQL - Rest API</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
